# Tebita-SLA-System

./: CHANGELOG.md  DEPLOY.md  FIXED_README.md  LICENSE  PREREQUISITES.md  QUICKSTART.md  README.md  README_DEPLOY.md  SECURITY_SCAN.md  Tebita-SLA-System.code-workspace  deploy.ps1  docker-compose.yml  nginx.conf  run11.bat  run_app.bat  tebita.db  verification_error.txt
backend/: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  backfill_sla_data.py  create_admin.py  debug_auth_logic.py  debug_kpi_calc.py  debug_satisfaction.py  debug_sla.py  find_overdue.py  fix_sla_nulls.py  list_users.py  pyproject.toml  requirements.txt  revert_rating.py  run.py  simulate_rating.py  sync_ratings.py  users_dump.txt  users_list.txt  verify_export_format.py
backend/app/: __init__.py  auth.py  config.py  database.py  kpi_calculator.py  limiter.py  main.py  models.py  models_resource_specific.py  models_system_settings.py  schemas.py  schemas_resource_specific.py  scorecard_calculator.py  sla_utils.py
backend/migrations/: env.py
backend/scripts/: add_kpis_scorecards.py  add_missing_subdepts.py  add_more_requests.py  add_subdepartments.py  check_db_data.py  check_medcom_departments.py  check_pharma_duplicates.py  check_request.py  check_user.py  check_users.py  cleanup_medcom_duplicates.py  cleanup_pharma_duplicates.py  create_admin_user.py  create_demo_data.py  create_leadership_users.py  create_medcom_subs.py  create_new_subdept_users.py  create_sample_data.py  create_subdept_users.py  create_targeted_demo_data.py  create_test_user.py  credentials.md  diagnose_login.py  (+38 more)
(+108 files in other folders)
